--- a/src/app/game-create/game-create.component.html
+++ b/src/app/game-create/game-create.component.html
@@ -1,1 +1,49 @@
-<p>game-create works!</p>
+<div class="pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Add a Game</h1>
+    <p class="custom-text">A demo CRUD built with <strong>Angular 10
+        and Firebase</strong></p>
+  </div>
+  
+  <!-- Student form -->
+  <form [formGroup]="gameForm" (ngSubmit)="submitGameData()" novalidate>
+    <div class="row">
+      <div class="col-lg-5 col-md-12 col-sm-12">
+        <div class="row">
+  
+          <div class="col-md-12 mb-3">
+            <label>Title of Game</label>
+            <input type="text" formControlName="title" class="form-control" required>
+            <!-- Showing errors using getter method -->
+            <p *ngIf="title.touched && title.invalid" class="error"><sup>*</sup>Please enter atleast a title of the Game</p>
+            <p *ngIf="title.errors?.minlength" class="error"><sup>*</sup>The title of game should have more than 2 letters</p>
+          </div>
+       
+        </div>
+        <br/>
+        <div class="row">
+          <div class="col-md-12 mb-3">
+            <label>Description</label>
+            <input type="text" formControlName="description" class="form-control" required>
+            <!-- Showing errors using getter method -->
+            <p *ngIf="description.touched && description.invalid" class="error"><sup>*</sup>Please provide Description</p>
+            <br/>
+          </div>
+
+          <div class="col-md-12 mb-3">
+            <label>Image URLs</label>
+            <input type="url" placeholder="https://image-example.png/" ngModel pattern="https://.*" formControlName="photo" class="form-control" required>
+            <!-- Showing errors using getter method -->
+            <p *ngIf="photo.touched && photo.invalid" class="error"><sup>*</sup>Please provide an URL Image</p>
+            <br/>
+          </div>
+  
+        </div>
+  
+        <div class="form-group text-right">
+          <button type="button" class="btn btn-warning mr-2" (click)="ResetForm()">Reset</button>&nbsp;&nbsp;
+          <button type="submit" class="btn btn-primary" [disabled]="!gameForm.valid">Add a Game</button>
+        </div>
+  
+      </div>
+    </div>
+  </form><!-- Student form ends-->
