--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,15 +2,16 @@
     <div class="container-fluid">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active">
-          <a routerLink="books">Games</a>
+          <a class="font-nav" routerLink="register-game">Game Lister</a>
         </li>
-      </ul>
+      </ul>&nbsp;&nbsp;
+      <img src="https://www.freepngimg.com/thumb/joystick/25115-4-joystick-file-thumb.png" style="width: 50px;" />
       <ul class="nav navbar-nav navbar-right">
         <li routerLinkActive="active">
-          <a routerLink="auth/signup">Créer un compte</a>
+          <a routerLink="auth/signup"><strong>Sign Up</strong></a>
         </li>
         <li routerLinkActive="active">
-          <a routerLink="auth/signin">Connexion</a>
+          <a routerLink="auth/signin"><strong>Sign in</strong></a>
         </li>
       </ul>
     </div>
