--- a/src/app/game-edit/game-edit.component.html
+++ b/src/app/game-edit/game-edit.component.html
@@ -1,1 +1,62 @@
-<p>game-edit works!</p>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">Edit Game Details</h1>
+    <div class="btn-toolbar mb-2 mb-md-0">
+       <div class="btn-group">
+          <!-- goBack() methos to back to previous component -->
+          <button class="btn btn-sm btn-outline-secondary" (click)="goBack()">Go Back</button>
+       </div>
+    </div>
+ </div>
+ <br/>
+ 
+ <div class="row">
+    <div class="col-lg-12">
+       <div class="pricing-header form-block mx-auto">
+ 
+          <!-- Student's Edit Form -->
+          <form [formGroup]="editForm" (ngSubmit)="updateForm()" novalidate>
+             <div class="row">
+                <div class="col-lg-5 col-md-12 col-sm-12">
+                   <div class="row">
+                      <div class="col-md-12 mb-3">
+                         <label>Title</label>
+                         <input type="text" formControlName="title" class="form-control" required>
+                         <p *ngIf="title.touched && title.invalid" class="error">
+                             <sup>*</sup>Please enter a title
+                         </p>
+                         <p *ngIf="title.errors?.minlength" class="error">
+                             <sup>*</sup>Title should have more than 2 letters
+                         </p>
+                         <br/>
+                      </div>
+                   </div>
+                   <div class="row">
+                      <div class="col-md-12 mb-3">
+                        <label>Description</label>
+                        <input type="text" formControlName="description" class="form-control" required>
+                        <!-- Showing errors using getter method -->
+                        <p *ngIf="description.touched && description.invalid" class="error"><sup>*</sup>Please provide a description</p>
+                        <br/>
+                      </div>
+
+                      <div class="col-md-12 mb-3">
+                        <label>Image URLs</label>
+                        <input type="url" placeholder="https://image-example.png/" ngModel pattern="https://.*" formControlName="photo" class="form-control" required>
+                        <!-- Showing errors using getter method -->
+                        <p *ngIf="photo.touched && photo.invalid" class="error"><sup>*</sup>Please provide an URL Image</p>
+                        <br/>
+                      </div>
+                   </div>
+                   <div class="form-group text-right">
+                      <button type="submit" class="btn btn-success btn-block" [disabled]="!editForm.valid">
+                          Update Game
+                      </button>
+                   </div>
+                </div>
+             </div>
+          </form>
+          <!-- Student's Edit Form ends-->
+          
+       </div>
+    </div>
+ </div>
