finishing, design adjustements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,7 @@
     <nav class="col-md-2 d-md-block bg-light sidebar" style="margin-top: 70px; margin-left: 20px;">
       <div style="font-size: 20px;" class="sidebar-sticky">
         <ul class="nav flex-column">
+          <!-- <hr style="height: 0; margin-top: 3px; border: 1px double black"> -->
           <!-- routerLink="/register-game" to navigate to game-list component -->
           <li class="nav-item">
             <a class="nav-link" routerLink="/register-game" routerLinkActive="active">
@@ -50,10 +51,11 @@
         </ul>
       </div>
     </nav>
+    <br/>
     <div class="container">
       <div class="border-center">
-    <img style="width: 200px; float: right; margin-right:100px" src="https://img1.freepng.fr/20180325/gee/kisspng-playstation-4-joystick-playstation-3-game-controll-joystick-5ab72ee27a7e67.6136780815219545305017.jpg"/>
-    <h2 style="margin-left: 50px"><strong>Simple : click on "Add a new game" in the sidebar to create the game that you want to add in your list !</strong></h2>
+    <img style="width: 200px; float: right; margin-right:100px; margin-top: 30px;" src="https://img1.freepng.fr/20180325/gee/kisspng-playstation-4-joystick-playstation-3-game-controll-joystick-5ab72ee27a7e67.6136780815219545305017.jpg"/>
+    <h2 style="margin-left: 50px"><strong>Simple : click on "Add a new game" in the left sidebar to create the game that you want to add in your list !</strong></h2>
   </div>
 </div>
     <!-- Main content -->
