--- a/src/app/game-edit/game-edit.component.html
+++ b/src/app/game-edit/game-edit.component.html
@@ -3,7 +3,7 @@
     <div class="btn-toolbar mb-2 mb-md-0">
        <div class="btn-group">
           <!-- goBack() methos to back to previous component -->
-          <button class="btn btn-sm btn-outline-secondary" (click)="goBack()">Go Back</button>
+          <button class="btn btn-sm btn-outline-secondary" (click)="goBack()" style="width: 100px; font-size: 20px;">Go Back</button>
        </div>
     </div>
  </div>
