--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,9 @@
       <img src="https://www.freepngimg.com/thumb/joystick/25115-4-joystick-file-thumb.png" style="width: 50px;" />
       <ul class="nav navbar-nav navbar-right">
         <li routerLinkActive="active">
+           <a href="https://github.com/SamirTouira"><img src="https://www.freeiconspng.com/uploads/github-logo-icon-24.png" style="width: 25px;" />&nbsp;<strong>Github Project</strong></a>
+          </li>
+        <li routerLinkActive="active">
           <a routerLink="auth/signup"><strong>Sign Up</strong></a>
         </li>
         <li routerLinkActive="active">
