--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,9 +5,10 @@
     /* border: 1px solid black; */
     border-right: 3px double black;
     border-bottom: 3px double black;
+    border-top: 3px double black;
     /* border-top: 1px solid black; */
     /* border-radius: 30px; */
-    /* box-shadow: 1px 2px black, -0.5em 0 .4em black; */
+    box-shadow: 1px 2px black, -0.5em 0 .4em black;
     opacity: 0.8;
 }
 
@@ -18,6 +19,7 @@
 .font-nav{
     font-family: 'Bangers', cursive;
     font-size: 50px;
+    text-shadow: #FC0 1px 0 10px;
 }
 
 .fa-google{
@@ -31,4 +33,23 @@
 .border-center{
     border: 3px solid black;
     border-radius: 20px;
+    margin-left: 180px;
+    width: 70%;
+    box-shadow: 1px 2px black, -0.3em 0 .4em black;
+}
+
+.navbar-dark{
+    height: 100px;
+}
+
+.navbar-brand{
+    margin-top: 50px;
+}
+
+.nav-link:hover{
+    font-size: 22px;
+}
+
+.sidebar-sticky{
+    margin-top: 30px;
 }
